--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@astrojs/starlight": "^0.28.6",
+        "@trueberryless-org/starlight-plugins-docs-components": "^0.2.1",
         "astro": "^4.16.9",
         "sharp": "^0.33.5",
         "starlight-contributor-list": "workspace:*"
