--- a/docs/package.json
+++ b/docs/package.json
@@ -25,8 +25,7 @@
     "@trueberryless-org/starlight-plugins-docs-components": "^0.2.2",
     "astro": "^5.3.0",
     "sharp": "^0.33.5",
-    "starlight-contributor-list": "workspace:*",
-    "starlight-plugin-show-latest-version": "^0.2.0"
+    "starlight-contributor-list": "workspace:*"
   },
   "packageManager": "pnpm@9.6.0",
   "engines": {
