--- a/docs/package.json
+++ b/docs/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.33.0",
+    "@hideoo/starlight-plugins-docs-components": "^0.4.0",
     "@trueberryless-org/starlight-plugins-docs-components": "^0.2.2",
     "astro": "^5.6.1",
     "sharp": "^0.33.5",
