--- a/packages/starlight-contributor-list/package.json
+++ b/packages/starlight-contributor-list/package.json
@@ -6,6 +6,9 @@
   "bugs": {
     "url": "https://github.com/trueberryless-org/starlight-contributor-list/issues"
   },
+  "scripts": {
+    "all-contributors generate": "pnpm all-contributors generate"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/trueberryless-org/starlight-contributor-list.git",
@@ -16,10 +19,13 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
+    "./components/AllContributorsRC.astro": "./components/AllContributorsRC.astro",
+    "./components/ContributorList.astro": "./components/ContributorList.astro",
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@11ty/eleventy-fetch": "^4.0.1"
+    "@11ty/eleventy-fetch": "^4.0.1",
+    "all-contributors-cli": "^6.26.1"
   },
   "devDependencies": {
     "@astrojs/starlight": "^0.33.0",
